[gd_scene load_steps=7 format=3 uid="uid://im7dvn01s5ui"]

[ext_resource type="Script" uid="uid://2t7ed5gq3sc2" path="res://objects/player.gd" id="1_jjrhu"]
[ext_resource type="PackedScene" uid="uid://voersvek38s5" path="res://objects/components/player_collision_shape.tscn" id="2_5ay6b"]
[ext_resource type="Texture2D" uid="uid://7o26uwyl308w" path="res://assets/pawn.png" id="3_3slw6"]
[ext_resource type="PackedScene" uid="uid://stcqnyvhg6jt" path="res://objects/components/animation_component.tscn" id="4_0e2bb"]
[ext_resource type="PackedScene" uid="uid://cj7yt7xxwc7uc" path="res://objects/components/damage_area_component.tscn" id="4_eksqh"]

[sub_resource type="SpriteFrames" id="SpriteFrames_4w0my"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_3slw6")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_mask = 2
script = ExtResource("1_jjrhu")

[node name="PlayerCollisionShape" parent="." instance=ExtResource("2_5ay6b")]

[node name="AttackDelayTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="AnimationComponent" parent="." instance=ExtResource("4_0e2bb")]
sprite_frames = SubResource("SpriteFrames_4w0my")

[node name="DamageAreaComponent" parent="." instance=ExtResource("4_eksqh")]

[connection signal="damaged" from="DamageAreaComponent" to="." method="_on_damage_area_component_damaged"]
